--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,8 +102,8 @@ h6 {
 * Desktop Navigation 
 */
 .navbar {
-  padding: 0;
-  border-radius: 10px;
+  padding: 8px;
+  border-radius: 11px;
   background: #44444496;
 }
 
