--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ h6 {
 
 #header .logo {
   border-radius: 10px;
-  background: #a5a5a561;
+  background: #a5a5a5d9;
   font-size: 28px;
   margin: 0;
   padding: 0;
@@ -93,6 +93,25 @@ h6 {
 
 #header .logo img {
   max-height: 100px;
+}
+
+.morph {
+  border: 2px solid #f3f4b0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+ 
+.morph:hover {
+  border: 2px solid #f3f4b0;
+  border-radius: 50%;
+  -webkit-transform: rotate(360deg);
+     -moz-transform: rotate(360deg);
+       -o-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 /*--------------------------------------------------------------
