almost final changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -595,6 +595,8 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
+  border-radius: 10%;
+  border: 0.1px solid rgb(231, 224, 224);
   text-align: center;
   padding: 70px 20px 80px 20px;
   transition: all ease-in-out 0.3s;
